--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,13 @@ body {
         margin-bottom:20px;
 
    }
-            
+      
+   #hangman-game {
+    margin-left:20px;
+    margin-bottom:30px;
+    border: 3px solid black;
+   }
+
      @media screen and (max-width:980px){
         nav{width:100%;}        
             }
