Added the trivia game and crystal game to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,14 @@ body {
     border: 3px solid black;
    }
 
+   .hangman {
+       margin-top: 28px;
+   }
+
+   .trivia {
+       margin-left:20px;
+   }
+
      @media screen and (max-width:980px){
         nav{width:100%;}        
             }
