--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,11 @@ body {
        margin-left:20px;
    }
 
+   .giphyt {
+       margin-left:50px;
+
+   }
+
      @media screen and (max-width:980px){
         nav{width:100%;}        
             }
